<package format="3">
  <name>mecanum</name>
  <version>0.0.1</version>
  <description>mecanum</description>

  <maintainer email="marciszanda@gmail.com">Szanda Márton</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend> 
  <depend>tf2</depend>
  <depend>mecanum_common</depend>
  <depend>tf2_geometry_msgs</depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
